Fix navbar to the right

--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -5,3 +5,12 @@
 body {
     font-family: "Mulish", 'Courier New', Courier, monospace;
 }
+
+/* start navigation */
+
+.page-header.menu.navbar.navbarbrand{
+
+} 
+
+
+/* end navigation */
