--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -100,3 +100,23 @@
 
 
 /* End About section*/
+
+/* Start Gallery section*/
+
+.page-main .gallery-section {
+    padding: 60px 0;
+}
+
+.gallery-item {
+    padding: 10px 0;
+}
+
+.page-main .gallery-section .grid .img-description h4 {
+    font-weight: 800;
+    font-size: 25px;
+    line-height: 12px;
+    font-family: "Mulish", 'Courier New', Courier, monospace;
+
+} 
+
+/* End Gallery section*/
