--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -119,4 +119,8 @@
 
 } 
 
+.page-main .gallery-section .grid .pictures a:hover img{
+    filter: brightness(1.3)drop-shadow(1px 8px 30px #778899);
+}
+
 /* End Gallery section*/
