--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -124,3 +124,70 @@
 }
 
 /* End Gallery section*/
+
+/* Start Quotes section*/
+
+.page-main .quotes-section .quotes-title {
+    padding: 100px 75px 25px 75px;
+}
+
+.page-main .quotes-section .quotes-title h1{
+    line-height: 50px;
+    letter-spacing: 21px;
+    font-size: 35px;
+    font-weight: 800;
+    
+}
+
+.page-main .quotes-section .quotes-title h1 span{
+    font-size: 45px;
+    text-decoration: underline;
+    text-decoration-color: red;
+}
+
+.page-main .quotes-section .quotes-title p{
+    padding-top: 35px;
+}
+
+.page-main .quotes-section .astronaut {
+    border: 1px solid #BFBFBF;
+    background-color: white;
+    box-shadow: 5px 5px 2.5px #aaaaaa;
+    margin: 45px 0;
+}
+
+/*
+.page-main .quotes-section .astronaut div:hover{
+    filter: brightness(1.1)drop-shadow(1px 8px 30px #778899);
+}
+*/
+
+.page-main .quotes-section .astronaut .astronaut-img {
+    padding: 30px;
+}
+
+.page-main .quotes-section .astronaut .astronaut-quote{
+    padding-top: 30px;
+}
+
+.page-main .quotes-section .owl-carousel .owl-item {
+    display: flex;
+    justify-content: center;
+    padding: 0 20px;
+}
+
+/* styling for dot .about-section
+.page-main .quotes-section .owl-carousel .owl-dots .owl-dot.active span {
+    background: darkslategray;
+    height: 15px;
+    width: 15px;
+
+}
+
+*/ 
+
+
+
+
+
+/* End Quotes section*/
