--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -105,7 +105,10 @@
 /* End About section*/
 
 /* Start ISS-Map section*/
-#iss-map {}
+#iss-map {
+    height: 350px;
+    width: 550px;
+}
 
 /* End ISS-Map section*/
 
