Fix footer logo image made bigger

--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -252,6 +252,11 @@
 footer.footer-section {
 	padding: 75px 0;
 	font-family: "Russo One", "Courier New", Courier, monospace;
+	background: url(/SpaceStation/img/background.png);
+}
+
+footer.footer-section .iss-logo {
+	padding: 40px 0;
 }
 
 footer.footer-section .social-media a > i {
