--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -186,7 +186,7 @@
 }
 
 .page-main .gallery-section .grid .pictures a:hover img {
-	filter: brightness(1.3) drop-shadow(1px 8px 30px #778899);
+	filter: brightness(1.2) drop-shadow(1px 8px 30px #778899);
 }
 
 /* End Gallery section*/
@@ -211,6 +211,7 @@
 
 .page-main .quotes-section .quotes-title h1 > span {
 	font-size: 45px;
+	color: #ff0000;
 }
 
 .page-main .quotes-section .quotes-title p {
