--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -51,9 +51,13 @@
 /* end navigation */
 
 /* start page top area */
+.page-main {
+	background: url(SpaceStation/img/background.png);
+	background-position: 0% 50%;
+}
 
 .page-main .page-top {
-	background: url(/SpaceStation/img/background.png); /*add white background*/
+	background: url(/SpaceStation/img/background.png);
 	background-position: 0% 50%;
 	padding: 75px 320px 85px 320px;
 }
