--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -52,8 +52,8 @@
 
 /* start page top area */
 
-.page-main {
-	background: url(/SpaceStation/img/background.png);
+main.page-main {
+	background: url(https://imgur.com/a/7WRUcjP);
 	background-position: 0% 50%;
 }
 
