Problem: trying to fix GitHub publishing background image problem

--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -53,7 +53,7 @@
 /* start page top area */
 
 main.page-main {
-	background: url(https://imgur.com/a/7WRUcjP);
+	background: url("SpaceStation/img/background.png");
 	background-position: 0% 50%;
 }
 
