Fixed RT-section to ISS Real Time section to make sections more clear

--- a/SpaceStation/css/style.css
+++ b/SpaceStation/css/style.css
@@ -131,7 +131,7 @@ html {
 
 /* end About section*/
 
-/* start ISS-Map section*/
+/* start ISS Real Time section*/
 
 .page-main .RT-section {
 	background: url("https://JosefinE7.github.io/MS2_SpaceStation/SpaceStation/img/background.png");
@@ -172,7 +172,7 @@ html {
 	width: 800px;
 }
 
-/* end ISS-Map section*/
+/* end ISS Real Time section*/
 
 /* start Gallery section*/
 
